# CliffordQASM

./: .gitignore  .python-version  NOTES.md  Qiskit_failures.ipynb  README.md  cliffordT_converter.py  qasm_parser.py  setup.cfg
cliffordT_qasm_circuits/: cliffordT_adder.qasm  cliffordT_gateteleport.qasm  cliffordT_scqec.qasm
debug/: test_clifford.py  test_conversion_functions.py  test_toffoli.py
docs/: NOTES.md
qasm_circuits/: adder.qasm  toffoli.qasm
src/CliffordQASM/: cliffordT_converter.py  constants.py  gates.py  qasm_parser.py
src/CliffordQASM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
